// TensorFlow Example proto for SequenceExample
// Matches the structure from tensorflow/core/example/example.proto
syntax = "proto3";

package tensorflow;

message SequenceExample {
  Features context = 1;
  FeatureLists feature_lists = 2;
}

message Features {
  map<string, Feature> feature = 1;
}

message FeatureLists {
  map<string, FeatureList> feature_list = 1;
}

message FeatureList {
  repeated Feature feature = 1;
}

message Feature {
  oneof kind {
    BytesList bytes_list = 1;
    FloatList float_list = 2;
    Int64List int64_list = 3;
  }
}

message BytesList {
  repeated bytes value = 1;
}

message FloatList {
  repeated float value = 1;
}

message Int64List {
  repeated int64 value = 1;
}
